店铺营业状态设置代码

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,7 @@ sky:
     access-key-id: LTAI5tEnqmNRSL8hTJuKrqq1
     access-key-secret: NMnMtlr3RYm1gVIDfMeyf8NFZhzsNk
     bucket-name: randytaylor
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
